qmlformat: change comment handling behavior

Cumulative commit for adding zero-length comments in qmljsengine and
also handling of empty lines after comments.

qmljsengine only adds comments if the relavant comment length is larger
than 0. Allow adding zero length comments since empty comments might be
useful and required in some situations.

Unlike the  other formatting tools (clang-format, rustfmt) qmlformat
didnt respect the emptylines after comments and stick the comments to
the associated element. Change this behavior such that a newline/
blankline is added(but no more than one).

A few tests in qmldom/reformatter needed to be edited due to this new
behavior.

Fixes: QTBUG-111231
Change-Id: I2fcdda0bfe569b7a1d19c4058e1604cb0d73291d
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit b5274d073bf015b764c12ce4121d3be6d2378cc9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>