tests/auto/qml/qmlformat/data/blanklinesAfterComment.formatted.qml
@@ -1,0 +1,13 @@
+/* comment with spaces   */
+
+/*
+  another comment
+      */
+//
+
+// another comment /*test  */
+
+import QtQml
+
+QtObject {
+}
