tests/auto/qml/qmlformat/data/blanklinesAfterComment.qml
@@ -1,0 +1,15 @@
+/* comment with spaces   */
+
+/*
+  another comment
+      */
+//
+
+
+// another comment /*test  */
+
+
+
+import QtQml
+
+QtObject {}
