tests/auto/qml/qmlformat/tst_qmlformat.cpp
@@ -307,6 +307,9 @@ void TestQmlformat::testFormat_data()
     QTest::newRow("arrowFunctionWithBinding")
             << "arrowFunctionWithBinding.qml"
             << "arrowFunctionWithBinding.formatted.qml" << QStringList{} << RunOption::OnCopy;
+    QTest::newRow("blanklinesAfterComment")
+            << "blanklinesAfterComment.qml"
+            << "blanklinesAfterComment.formatted.qml" << QStringList{} << RunOption::OnCopy;
 }
 
 void TestQmlformat::testFormat()
